objects/PEPE_Learning_Partners__c.object
<CustomObject>
    <fields>
        <fullName>BLP_User_Email__c</fullName>
        <description>Capture blp user email information to send alerts based on platform - (tbi)</description>
        <label>BLP User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Alias__c</fullName>
        <description>Learning Partner Email Alias</description>
        <label>Email Alias</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Learning_Partner_Group__c</fullName>
        <description>Learning Partner Company as group details</description>
        <label>Learning Partner Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>Enter platform that user would use it for the BLP workflow</description>
        <label>Platform</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Email_ALias__c</fullName>
        <description>This email alias is used when org is sandbox</description>
        <label>Sandbox Email ALias</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <description>BLP user name</description>
        <label>User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>We will capture all the learning partners and their email aliases</description>
    <label>PEPE Learning Partners</label>
    <listViews>
        <fullName>With_email_list_view</fullName>
        <columns>NAME</columns>
        <columns>Learning_Partner_Group__c</columns>
        <columns>Email_Alias__c</columns>
        <columns>BLP_User_Email__c</columns>
        <columns>Platform__c</columns>
        <columns>Sandbox_Email_ALias__c</columns>
        <columns>username__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>With email list view</label>
        <language>en_US</language>
    </listViews>
</CustomObject>